--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,7 +1,7 @@
 .footer{
   background-color: var(--background-color-02);
   height: 60px;
-  border-radius: 5px;
+  border-radius: 3px 3px 0 0;
   max-width: 840px;
 }
 
