--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -3,7 +3,7 @@
   padding-bottom: 1px;
   max-width: 840px;
   margin: auto;
-  border-radius: 5px;
+  border-radius: 0 0 3px 3px;
 }
 
 /*menu*/
@@ -153,7 +153,7 @@
   margin-bottom: 12px;  
   text-align: center;
   font-size: 1.2rem;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 
 .button-small{
@@ -162,7 +162,7 @@
   height: 40px;
   width: 25%;
   border: 1px solid var(--text-color-01);
-  border-radius: 8px;
+  border-radius: 6px;
   font-size: 1.2rem;
 }
 
