--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -2,7 +2,7 @@
   background-color: var(--background-color-02);
   height: 60px;
   border-radius: 3px 3px 0 0;
-  max-width: 840px;
+  max-width: var(--max-width);
 }
 
 .footer__info, .footer__contact{
