--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 .main{
-  max-width: 840px;
+  max-width: var(--max-width);
   margin: auto;
   padding-bottom: 20px;
   background-color: var(--background-color-05);
